-----------
v3.2.11-git
-----------



-------
v3.2.10
-------

[jan] Don't duplicate messages in Procmail's vacation recipe if excluding email
      addresses (Michael.Martin@warp-it.com, Bug #14275).
[jan] Remove stop-script feature from Procmail driver.


------
v3.2.9
------

[mjr] Fix PHP deprecated warnings in unit test (PR #176, Mathieu Parent
      <math.parent@gmail.com>).
[mjr] Honor 'date', 'echo', and 'ls' path overrides (Bug #14284).
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).
[jan] Fix Oracle compatibility (Bug #14262).


------
v3.2.8
------

[jan] Fix editing shared rulesets (Bug #12694).
[jan] Allow to edit permissions of another user's rules if that user assigned
      ownership.
[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[jan] Fix variable name in vacation_addresses hook example.
[jan] Correctly save names of mailbox created from the rule form (Bug #14150).
[mjr] Fix invalid URLs in certain forms when cookies are disabled (Bug #14148).


------
v3.2.7
------

[jan] Update Italian translation.
[mjr] Add database migration for fixing corrupt rule ordering.
[mjr] Fix corruption of rule order when reordering rules in certain cases.


------
v3.2.6
------

[mjr] Fix using transport parameters in Procmail driver.
[jan] Update Czech translation.
[jan] Update Italian translation.
[mjr] Fix selecting incorrect rule when performing any action after reordering
      (Bug #14064 and Bug #13643).
[jan] Fix duplicate messages when using the redirect-and-keep rule with
      Procmail backends.


------
v3.2.5
------

[jan] Add Galician translation.
[mms] Enforce selection of a target folder for the spam filter in the UI (Bug
      #13917).
[jan] Fix Sieve error if days of vacation is unset (Bug #13890).


------
v3.2.4
------

[mms] Rate-limit filters drag/drop changes to prevent race conditions (Bug
      #13819).
[mms] Fix filter drag/drop ordering working in basic view (Bug #13820).